--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
     <head>
         <title>Home - Discover Paris</title>
-        <link href="universal.css" rel="stylesheet" type="text/css">
-        <link href="overrides.css" rel="stylesheet" type="text/css">
+        <link href="css/universal.css" rel="stylesheet" type="text/css">
+        <link href="css/overrides.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <nav class="navbar-nav">
@@ -14,11 +14,11 @@
                     <li><a href="#">How to Visit</a></li>
                 </ul>
                 <div class="navbar-brand">
-                    <img src="logo.png">
+                    <img src="img/logo.png">
                 </div>
                 <ul class="nav-link-set">
                     <li><a href="#">Landmarks</a></li>
-                    <li><a href="aboutus.htm">About Us</a></li>
+                    <li><a href="about-us">About Us</a></li>
                 </ul>
             </div>
         </nav>
