Disable active tab

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav class="navbar-nav">
             <div class="navbar-container">
                 <ul class="nav-link-set">
-                    <li><a href="#">Home</a></li>
+                    <li><a disabled>Home</a></li>
                     <li><a href="#">How to Visit</a></li>
                 </ul>
                 <div class="navbar-brand">
