--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 </ul>
             </div>
         </nav>
-        <p>Contact us here!</p>
+        <div class="container">
+            <p>Contact us here!</p>
+        </div>
     </body>
 </html>
