Fix how to visit link

--- a/how-to-visit/index.html
+++ b/how-to-visit/index.html
@@ -11,7 +11,7 @@
             <div class="navbar-container">
                 <ul class="nav-link-set">
                     <li><a disabled>Home</a></li>
-                    <li><a href="#">How to Visit</a></li>
+                    <li><a href="how-to-visit">How to Visit</a></li>
                 </ul>
                 <div class="navbar-brand">
                     <img src="../img/logo.png">
