--- a/how-to-visit/index.html
+++ b/how-to-visit/index.html
@@ -5,13 +5,14 @@
         <title>How to Visit - Discover Paris</title>
         <link href="../css/universal.css" rel="stylesheet" type="text/css">
         <link href="../css/overrides.css" rel="stylesheet" type="text/css">
+        <link href="../img/favicon.png" rel="icon" type="image/x-icon">
     </head>
     <body>
         <nav class="navbar-nav">
             <div class="navbar-container">
                 <ul class="nav-link-set">
-                    <li><a disabled>Home</a></li>
-                    <li><a href="how-to-visit">How to Visit</a></li>
+                    <li><a href="../">Home</a></li>
+                    <li><a disabled>How to Visit</a></li>
                 </ul>
                 <div class="navbar-brand">
                     <img src="../img/logo.png">
@@ -24,6 +25,12 @@
         </nav>
         <div class="container">
             <h1 class="page-title">How to Visit</h1>
+            <p>Visiting the wonderful city of Paris is quite simple! There are 3 important things to look out for:</p>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
     </body>
 </html>
