--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <title>Home - Discover Paris</title>
         <link href="css/universal.css" rel="stylesheet" type="text/css">
         <link href="css/overrides.css" rel="stylesheet" type="text/css">
+        <link href="img/favicon.png" rel="icon" type="image/x-icon">
     </head>
     <body>
         <nav class="navbar-nav">
             <div class="navbar-container">
                 <ul class="nav-link-set">
                     <li><a disabled>Home</a></li>
-                    <li><a href="#">How to Visit</a></li>
+                    <li><a href="how-to-visit">How to Visit</a></li>
                 </ul>
                 <div class="navbar-brand">
                     <img src="img/logo.png">
