Unlink unix file type

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Home - Discover Paris</title>
         <link href="css/universal.css" rel="stylesheet" type="text/css">
         <link href="css/overrides.css" rel="stylesheet" type="text/css">
-        <link href="img/favicon.png" rel="icon" type="image/x-icon">
+        <link href="img/favicon.png" rel="icon">
     </head>
     <body>
         <nav class="navbar-nav">
