--- a/how-to-visit/index.html
+++ b/how-to-visit/index.html
@@ -26,11 +26,11 @@
         <div class="container">
             <h1 class="page-title">How to Visit</h1>
             <p>Visiting the wonderful city of Paris is quite simple! There are 3 important things to look out for:</p>
-            <ul>
+            <ol>
+                <li>Flights. Flights can be really expensive to book, and often take many stops overseas. </li>
                 <li></li>
                 <li></li>
-                <li></li>
-            </ul>
+            </ol>
         </div>
     </body>
 </html>
