Add list changes

--- a/how-to-visit/index.html
+++ b/how-to-visit/index.html
@@ -27,7 +27,7 @@
             <h1 class="page-title">How to Visit</h1>
             <p>Visiting the wonderful city of Paris is quite simple! There are 3 important things to look out for:</p>
             <ol>
-                <li>Flights. Flights can be really expensive to book, and often take many stops overseas. </li>
+                <li>Flights. Flights can be really expensive to book, and often take many stops overseas. However, if that does not stop you, feel free to look at a booking website.</li>
                 <li></li>
                 <li></li>
             </ol>
