Improve index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </div>
         </nav>
         <div class="container">
-            <p>Contact us here!</p>
+            <h1 class="page-title">Bonjour!</h1>
+            <p>The wonderful city of Paris offers many attractions to tourists. On our website you will find out how you can plan Paris as your next big vacation.</p>
         </div>
     </body>
 </html>
