Improve website "hook"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
         <div class="container">
             <h1 class="page-title">Bonjour!</h1>
-            <p>The wonderful city of Paris offers many attractions to tourists. On our website you will find out how you can plan Paris as your next big vacation.</p>
+            <p>The wonderful city of Paris offers many attractions to tourists. On our website you will find out how you can plan Paris as your next big vacation. We have a variety of information regarding Paris that you just might need to know before visiting.</p>
         </div>
     </body>
 </html>
