--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<!-- Discover Paris Website Homepage -->
+<!-- Want to learn how this code works? There are a variety of code learning websites to learn HTML, CSS, and JS. -->
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>Home - Discover Paris</title>
