Add index image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="img/favicon.png" rel="icon">
     </head>
     <body>
+        <img src="img/paris.png">
         <nav class="navbar-nav">
             <div class="navbar-container">
                 <ul class="nav-link-set">
