Crop paris.png and rename to .jpg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="img/favicon.png" rel="icon">
     </head>
     <body>
-        <img class="headerimg" src="img/paris.png">
+        <img class="headerimg" src="img/paris.jpg">
         <nav class="navbar-nav">
             <div class="navbar-container">
                 <ul class="nav-link-set">
