--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html lang="en">
     <head>
         <title>Home - Discover Paris</title>
+        <meta charset="utf-8">
         <link href="css/universal.css" rel="stylesheet" type="text/css">
         <link href="css/overrides.css" rel="stylesheet" type="text/css">
         <link href="img/favicon.png" rel="icon">
