--- a/how-to-visit.html
+++ b/how-to-visit.html
@@ -1,26 +1,27 @@
-<!-- Discover Paris Website Homepage -->
+<!-- Discover Paris: About Us -->
 <!-- Want to learn how this code works? There are a variety of code learning websites to learn HTML, CSS, and JS. -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>How to Visit - Discover Paris</title>
-        <link href="../css/universal.css" rel="stylesheet" type="text/css">
-        <link href="../css/overrides.css" rel="stylesheet" type="text/css">
-        <link href="../img/favicon.png" rel="icon">
+        <meta charset="utf-8">
+        <link href="css/universal.css" rel="stylesheet" type="text/css">
+        <link href="css/overrides.css" rel="stylesheet" type="text/css">
+        <link href="img/favicon.png" rel="icon">    
     </head>
     <body>
         <nav class="navbar-nav">
             <div class="navbar-container">
                 <ul class="nav-link-set">
-                    <li><a href="../">Home</a></li>
-                    <li><a disabled>How to Visit</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a>How to Visit</a></li>
                 </ul>
                 <div class="navbar-brand">
-                    <img src="../img/logo.png">
+                    <img src="img/logo.png">
                 </div>
                 <ul class="nav-link-set">
-                    <li><a href="#">Landmarks</a></li>
-                    <li><a href="../about-us">About Us</a></li>
+                    <li><a href="landmarks.html">Landmarks</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
                 </ul>
             </div>
         </nav>
