Reorganise fonts and code a row of "cards"

--- a/index.html
+++ b/index.html
@@ -29,6 +29,41 @@
         <div class="container">
             <h1 class="page-title">Bonjour!</h1>
             <p>The wonderful city of Paris offers many attractions to tourists. On our website you will find out how you can plan Paris as your next big vacation. We have a variety of information regarding Paris that you just might need to know before visiting.</p>
+            <div class="card-list">
+                <div class="card-container">
+                    <div class="card-header">
+                        <h1>Testing</h1>
+                    </div>
+                    <div class="card-body">
+                        <p>Hello. This is a test.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button>Test Button</button>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-header">
+                        <h1>Testing</h1>
+                    </div>
+                    <div class="card-body">
+                        <p>Hello. This is a test.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button>Test Button</button>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-header">
+                        <h1>Testing</h1>
+                    </div>
+                    <div class="card-body">
+                        <p>Hello. This is a test.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button>Test Button</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
